# board-of-directors

./: Cargo.toml  README.md
.github/workflows/: release-please.yml  release.yml
src/: agents.rs  backend.rs  bugfix.rs  bugfix_log.rs  claude_cli.rs  clear.rs  config.rs  consolidate.rs  copilot_cli.rs  files.rs  gemini_cli.rs  init.rs  main.rs  paths.rs  review.rs
