[package]
name = "board-of-directors"
version = "0.8.0"
edition = "2024"

[[bin]]
name = "bod"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
fs2 = "0.4"
getrandom = "0.4"
tokio = { version = "1", features = ["process", "fs", "rt-multi-thread", "macros", "io-util", "time", "net", "sync", "signal"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strip-ansi-escapes = "0.2"
toml = "1"
scopeguard = "1.1"

[dev-dependencies]
tempfile = "3"
